--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <build>
         <finalName>adt-algo</finalName>
         <plugins>
+            <!-- java source compile, expected to set to at least 1.8 -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
@@ -57,6 +58,7 @@
                     <target>${compiler.target}</target>
                 </configuration>
             </plugin>
+            <!-- shades all dependencies with project code -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -83,6 +85,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- test report - jacoco -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -102,6 +105,28 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- surefire integration tests as BDD stories -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <includes>
+                                <include>**/story/*.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -112,6 +137,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>4.1</version>
             <scope>test</scope>
         </dependency>
 
